web/resources/css/member.css
/* ... */
.header-search-field:focus{
    border: 1px solid #00deb6!important;
}

.header-search-box-search-result-layout{
    position: absolute;
    max-height: 350px;
    overflow-y: auto;
    background-color: #fff;
    z-index: 99!important;
    border: 1px solid #ccc;
    z-index: 99!important;
}
.header-search-box-search-result-ul{
    padding: 0;
    margin: 0;
}
.header-search-box-search-result-ul li{
    padding: 6px 12px;
}
.header-search-box-search-result-ul li:hover{
    background-color: #00deb6;
    color: #fff;
    cursor: pointer;
}
.dropdown-img button img{
    max-width: 40px;
    background: rgb(0, 222, 182);
    border-radius: 50%;
    float: right;
}

.dropdown-img.open > .dropdown-menu{
    left: auto;
    right: 0;
    border-radius: 0;
}
.dropdown-img-custom-button{
    background: none;
    border: none;
}
.dropdown-img-custom-button{
    background: none;
    border: none;
}
.dropdown-img.open > .dropdown-menu > li:hover{
    background-color: #00deb6!important;
    background-image: none!important;
}
.dropdown-img.open > .dropdown-menu > li > a:hover{
    color: #fff!important;
    background-color: #00deb6!important;
    background-image: none!important;
}


/* --------------------- Mobile Device -------------------------------------  */
@media (max-width : 767px) {
    .header-search-box-search-result-layout{
        width: 93.3%;
    }
    .header-custom-nav > .dropdown>.dropdown-menu> li>a{
        color: #bbb!important;
    }
    .header-custom-nav > .dropdown>.dropdown-menu> li>a:hover{
        color: #fff!important;
    }

    .dropdown-img-custom-button{
        margin-top: 7px;
    }
    .dropdown-img.open > .dropdown-menu{
        top: 58px;
    }
    .home-page-search-box-layout > typeahead-container {
        position: relative!important;
        display: block!important;
        top: 0!important;
        left: 0!important;
    }
    .home-page-search-box-layout > typeahead-container > ul {
        width: 100%!important;
    }
    .tabs-left .nav-tabs li {
        float: none!important; 
    }
}

/* --------------------- Tablet Device -------------------------------------  */
@media (min-width : 768px) and (max-width : 991px) {
    .header-search-box-search-result-layout{
        width: 93.3%;
    }
    .header-custom-nav > .dropdown>.dropdown-menu> li>a{
        color: #484848!important;
    }
    .header-custom-nav > .dropdown>.dropdown-menu> li>a:hover{
        color: #fff!important;
    }
    .header-custom-nav li a{
        padding: 15px 35px;
    }
    .dropdown-img-custom-button{
        margin-top: 3px;
        top: 6px;
        position: relative;
    }
    .dropdown-img.open > .dropdown-menu{
        top: 58px;
    }
    .header-navbar-container-fluid-adjust{
        margin-left: -30px!important;  
        margin-right: 0px!important;  
    }
    .home-page-search-box-layout > typeahead-container > ul > li > a{
        width: 348px;
    }
    .tabs-left .nav-tabs li {
        float: none!important; 
    }
}
/* --------------------- Medium Device -------------------------------------  */
@media (min-width : 992px) and (max-width : 1199px) {
    .header-search-box-search-result-layout{
        width: 94.5%;
    }
    .header-custom-nav > .dropdown>.dropdown-menu> li>a{
        color: #484848!important;
    }
    .header-custom-nav > .dropdown>.dropdown-menu> li>a:hover{
        color: #fff!important;
    }
    .header-custom-nav li a{
        padding: 15px 50px;
    }
    .dropdown-img-custom-button{
        margin-top: -62px;
    }
    .dropdown-img.open > .dropdown-menu{
        top: 58px;
    }
    .header-navbar-container-fluid-adjust{
        margin-left: -30px!important;  
        margin-right: 0px!important;  
    }
    .home-page-search-box-layout > typeahead-container > ul > li > a{
        width: 360px;
    }
    .tabs-left .nav-tabs li {
        float: none!important; 
    }
    .tabs-left > .nav-tabs > li > a {
        width: 140px;
    }
}
/* --------------------- Large Device -------------------------------------  */
@media (min-width : 1200px) {
    .header-search-box-search-result-layout{
        width: 95.5%;
    }
    .header-custom-nav > .dropdown>.dropdown-menu> li>a{
        color: #484848!important;
    }
    .header-custom-nav > .dropdown>.dropdown-menu> li>a:hover{
        color: #fff!important;
    }
    .header-custom-nav li a{
        padding: 15px 50px;
    }
    .dropdown-img-custom-button{
        padding: 8px 15px;
        margin-top: 3px;
    }
    .dropdown-img.open > .dropdown-menu{
        top: 58px;
    }
    .header-navbar-container-fluid-adjust{
        margin-left: -30px!important;  
        margin-right: 0px!important;  
    }
    .home-page-search-box-layout > typeahead-container > ul > li > a{
        width: 450px;
    }
    .tabs-left .nav-tabs li {
        float: none!important; 
    }
    .tabs-left > .nav-tabs > li > a {
        width: 140px;
    }
}
/* -------------------------------- Common ----------------------------- */


/* ---------------------------- Dashboard Left Sidebar Menu -------------------------------- */

.dashboard-left-sidebar-ul{
    padding: 0; 
    margin: 0; 
    list-style-type: none;
}
.dashboard-left-sidebar-ul > li > .active,.dashboard-left-sidebar-ul > li > .active:hover{
    font-family: "tw-cen-mt";
    text-decoration: none;
    color: #484848!important;
    font-weight: bold;
}

.dashboard-left-sidebar-ul > li > a{
    font-family: "tw-cen-mt";
    padding: 6px 0;
    font-size: 18px;
    color: #767676;
    line-height: 2em;
}
.dashboard-left-sidebar-ul > li > a:hover{
    font-family: "tw-cen-mt";
    text-decoration: none;
    padding: 6px 0;
    color: #bbbbbb;
    line-height: 2em;
}
/* ---------------------------- Feature Ad Left Sidebar Menu -------------------------------- */

.featured-ad-left-sidebar-ul{
    padding: 0; 
    margin: 0; 
    list-style-type: none;
}
/* ... */

